// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Check samples Sample: ActionPlansV4 1`] = `
{
  "logs": [
    [
      "sfdx-source/LabsActionPlans/main/default/classes/ActionPlanCreationController.cls",
      "Warning: line 768 at 3-93: Local variable is hiding class field 'taskIndex', see sfdx-source/LabsActionPlans/main/default/classes/ActionPlanCreationController.cls: line 29 at 9-26",
    ],
    [
      "sfdx-source/LabsActionPlans/main/default/classes/ActionPlanTemplateCreationController.cls",
      "Warning: line 251 at 3-93: Local variable is hiding class field 'taskIndex', see sfdx-source/LabsActionPlans/main/default/classes/ActionPlanTemplateCreationController.cls: line 24 at 9-26",
    ],
    [
      "sfdx-source/LabsActionPlans/main/default/classes/ActionPlansRedirect.cls",
      "Warning: line 36 at 2-34: Local variable is hiding class field 'recordId', see sfdx-source/LabsActionPlans/main/default/classes/ActionPlansRedirect.cls: line 24 at 9-21",
    ],
    [
      "sfdx-source/LabsActionPlans/main/default/classes/ActionPlansTaskTriggerUtilities.cls",
      "Warning: line 347 at 3-77: Local variable is hiding class field 'dependentApts', see sfdx-source/LabsActionPlans/main/default/classes/ActionPlansTaskTriggerUtilities.cls: line 24 at 16-70",
      "Warning: line 43 at 3-77: Local variable is hiding class field 'dependentApts', see sfdx-source/LabsActionPlans/main/default/classes/ActionPlansTaskTriggerUtilities.cls: line 24 at 16-70",
    ],
    [
      "sfdx-source/LabsActionPlans/main/default/classes/ActionPlansTriggerHandlers.cls",
      "Missing: line 330 at 42-73: Unknown field 'IsClosed' on SObject 'Schema.Event'",
    ],
    [
      "sfdx-source/LabsActionPlans/main/default/classes/ActionPlansUtilities.cls",
      "Warning: line 595 at 3-114: Local variable is hiding class field 'apSettings', see sfdx-source/LabsActionPlans/main/default/classes/ActionPlansUtilities.cls: line 567 at 16-52",
    ],
    [
      "sfdx-source/LabsActionPlans/main/default/tests/ActionPlansObjectTriggersTest.cls",
      "Warning: line 286 at 3-72: Local variable is hiding class field 'aps', see sfdx-source/LabsActionPlans/main/default/tests/ActionPlansObjectTriggersTest.cls: line 23 at 16-45",
      "Warning: line 326 at 3-72: Local variable is hiding class field 'aps', see sfdx-source/LabsActionPlans/main/default/tests/ActionPlansObjectTriggersTest.cls: line 23 at 16-45",
      "Warning: line 372 at 3-73: Local variable is hiding class field 'aps', see sfdx-source/LabsActionPlans/main/default/tests/ActionPlansObjectTriggersTest.cls: line 23 at 16-45",
    ],
    [
      "sfdx-source/LabsActionPlans/main/default/tests/ActionPlansTaskTriggerUtilitiesTest.cls",
      "Warning: line 211 at 2-45: Local variable is hiding class field 'testClosedStatus', see sfdx-source/LabsActionPlans/main/default/tests/ActionPlansTaskTriggerUtilitiesTest.cls: line 24 at 16-40",
      "Warning: line 450 at 2-45: Local variable is hiding class field 'testClosedStatus', see sfdx-source/LabsActionPlans/main/default/tests/ActionPlansTaskTriggerUtilitiesTest.cls: line 24 at 16-40",
      "Warning: line 57 at 2-45: Local variable is hiding class field 'testClosedStatus', see sfdx-source/LabsActionPlans/main/default/tests/ActionPlansTaskTriggerUtilitiesTest.cls: line 24 at 16-40",
    ],
  ],
  "status": 4,
}
`;

exports[`Check samples Sample: Angular 1`] = `
{
  "logs": [
    [
      "AngularJSDemoController.cls",
      "Error: line 1: Type 'AngularJSDemoController' is defined, but meta file is missing for 'AngularJSDemoController.cls'",
    ],
  ],
  "status": 4,
}
`;

exports[`Check samples Sample: Apex-Opensource-Library 1`] = `
{
  "logs": [
    [
      "force-app/commons/core/classes/SObjectCacheTest.cls",
      "Warning: line 109 at 8-87: Local variable is hiding class field 'accounts', see force-app/commons/core/classes/SObjectCacheTest.cls: line 26:11 to 36:6",
      "Warning: line 83:8 to 87:10: Local variable is hiding class field 'accounts', see force-app/commons/core/classes/SObjectCacheTest.cls: line 26:11 to 36:6",
    ],
    [
      "force-app/commons/core/classes/collections/CollectionImpl.cls",
      "Error: line 419 at 18-33: Method 'System.Boolean equals(Object)' from interface 'Object' must be implemented",
    ],
    [
      "force-app/commons/core/classes/collections/CollectionTest.cls",
      "Warning: line 911:8 to 913:18: Local variable is hiding class field 'opportunities', see force-app/commons/core/classes/collections/CollectionTest.cls: line 27:19 to 58:6",
    ],
    [
      "force-app/commons/core/classes/dataStructures/BitSet.cls",
      "Warning: line 47 at 8-46: Local variable is hiding class field 'bits', see force-app/commons/core/classes/dataStructures/BitSet.cls: line 40 at 12-29",
    ],
    [
      "force-app/commons/core/classes/xml/XmlNode.cls",
      "Warning: line 283 at 12-54: Local variable is hiding class field 'document', see force-app/commons/core/classes/xml/XmlNode.cls: line 263 at 26-48",
    ],
    [
      "force-app/commons/selectorLayer/classes/selectors/ShareQuery.cls",
      "Warning: line 70 at 8-45: Local variable is hiding class field 'sobjectType', see force-app/commons/selectorLayer/classes/core/QueryObject.cls: line 38 at 20-44",
    ],
  ],
  "status": 4,
}
`;

exports[`Check samples Sample: Apex-XML-Serializer 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: Apex-for-Xero 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: ApexTestKit 1`] = `
{
  "logs": [
    [
      "apex-test-kit/main/classes/ATKMock.cls",
      "Error: line 643 at 12-32: Incompatible types in assignment, from 'ATK.Method' to 'ATKMock.Method'",
    ],
  ],
  "status": 4,
}
`;

exports[`Check samples Sample: ApexTriggerHandler 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: Automated-Testing-for-Force 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: Centralized-Salesforce-Dev-Framework 1`] = `
{
  "logs": [
    [
      "src/classes/DateService.cls",
      "Error: line 291 at 2-14: Unreachable block or statement",
    ],
  ],
  "status": 4,
}
`;

exports[`Check samples Sample: ConnectApiHelper 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: Cumulus 1`] = `
{
  "logs": [
    [
      "Cumulus/force-app/infrastructure/apex-common/main/classes/fflib_QueryFactory.cls",
      "Warning: line 406 at 2-80: Local variable is hiding class field 'relationship', see Cumulus/force-app/infrastructure/apex-common/main/classes/fflib_QueryFactory.cls: line 84 at 9-47",
    ],
    [
      "Cumulus/force-app/infrastructure/apex-common/main/classes/fflib_SObjectDescribe.cls",
      "Warning: line 187 at 3-82: Local variable is hiding class field 'token', see Cumulus/force-app/infrastructure/apex-common/main/classes/fflib_SObjectDescribe.cls: line 41 at 9-34",
    ],
    [
      "Cumulus/force-app/infrastructure/apex-common/test/classes/fflib_ApplicationTest.cls",
      "Warning: line 100:2 to 103:3: Local variable is hiding class field 'unitOfWork', see Cumulus/force-app/infrastructure/apex-common/test/classes/fflib_ApplicationTest.cls: line 159:21 to 164:40",
      "Warning: line 66 at 2-73: Local variable is hiding class field 'unitOfWork', see Cumulus/force-app/infrastructure/apex-common/test/classes/fflib_ApplicationTest.cls: line 159:21 to 164:40",
    ],
    [
      "Cumulus/force-app/infrastructure/apex-extensions/main/application/dynamic/classes/fflib_AppBindingResolver.cls",
      "Warning: line 185 at 2-54: Local variable is hiding class field 'modules', see Cumulus/force-app/infrastructure/apex-extensions/main/application/dynamic/classes/fflib_AppBindingResolver.cls: line 62 at 9-47",
      "Warning: line 206 at 3-58: Local variable is hiding class field 'bindings', see Cumulus/force-app/infrastructure/apex-extensions/main/application/dynamic/classes/fflib_AppBindingResolver.cls: line 61 at 11-39",
    ],
    [
      "Cumulus/force-app/main/default/classes/ADDR_CopyAddrHHObjBTN_TEST.cls",
      "Warning: line 56:8 to 62:9: Local variable is hiding class field 'householdRecord', see Cumulus/force-app/main/default/classes/ADDR_CopyAddrHHObjBTN_TEST.cls: line 39 at 19-55",
      "Warning: line 65:8 to 73:9: Local variable is hiding class field 'contactRecord', see Cumulus/force-app/main/default/classes/ADDR_CopyAddrHHObjBTN_TEST.cls: line 38 at 19-41",
    ],
    [
      "Cumulus/force-app/main/default/classes/ALLO_PaymentSync_TEST.cls",
      "Warning: line 54:8 to 61:9: Local variable is hiding class field 'opportunity', see Cumulus/force-app/main/default/classes/ALLO_PaymentSync_TEST.cls: line 43 at 11-35",
    ],
    [
      "Cumulus/force-app/main/default/classes/BDI_ManageAdvancedMappingCtrl_TEST.cls",
      "Warning: line 209:8 to 213:20: Local variable is hiding class field 'account1', see Cumulus/force-app/main/default/classes/BDI_ManageAdvancedMappingCtrl_TEST.cls: line 59 at 25-54",
      "Warning: line 365:8 to 369:20: Local variable is hiding class field 'account1', see Cumulus/force-app/main/default/classes/BDI_ManageAdvancedMappingCtrl_TEST.cls: line 59 at 25-54",
    ],
    [
      "Cumulus/force-app/main/default/classes/BDI_MigrationMappingUtility.cls",
      "Warning: line 176 at 8-102: Local variable is hiding class field 'dataImportSettings', see Cumulus/force-app/main/default/classes/BDI_MigrationMappingUtility.cls: line 105 at 12-55",
      "Warning: line 178 at 8-76: Local variable is hiding class field 'helper', see Cumulus/force-app/main/default/classes/BDI_MigrationMappingUtility.cls: line 99 at 12-46",
    ],
    [
      "Cumulus/force-app/main/default/classes/BGE_DataImportBatchEntry_CTRL.cls",
      "Warning: line 645 at 12-53: Local variable is hiding class field 'columns', see Cumulus/force-app/main/default/classes/BGE_DataImportBatchEntry_CTRL.cls: line 631 at 28-49",
      "Warning: line 674 at 12-53: Local variable is hiding class field 'columns', see Cumulus/force-app/main/default/classes/BGE_DataImportBatchEntry_CTRL.cls: line 631 at 28-49",
      "Warning: line 844 at 12-33: Local variable is hiding class field 'donorName', see Cumulus/force-app/main/default/classes/BGE_DataImportBatchEntry_CTRL.cls: line 830 at 28-45",
      "Warning: line 864 at 16-56: Local variable is hiding class field 'errors', see Cumulus/force-app/main/default/classes/BGE_DataImportBatchEntry_CTRL.cls: line 835 at 28-48",
    ],
    [
      "Cumulus/force-app/main/default/classes/CRLP_ApiService.cls",
      "Warning: line 247 at 8-58: Local variable is hiding class field 'changedRollupTypes', see Cumulus/force-app/main/default/classes/CRLP_ApiService.cls: line 43 at 12-63",
      "Warning: line 269 at 8-58: Local variable is hiding class field 'changedRollupTypes', see Cumulus/force-app/main/default/classes/CRLP_ApiService.cls: line 43 at 12-63",
    ],
    [
      "Cumulus/force-app/main/default/classes/CRLP_RollupCMT.cls",
      "Warning: line 222 at 12-37: Local variable is hiding class field 'label', see Cumulus/force-app/main/default/classes/CRLP_RollupCMT.cls: line 176 at 15-28",
      "Warning: line 258 at 12-37: Local variable is hiding class field 'label', see Cumulus/force-app/main/default/classes/CRLP_RollupCMT.cls: line 176 at 15-28",
    ],
    [
      "Cumulus/force-app/main/default/classes/ElevateBatchCapturer.cls",
      "Warning: line 124 at 12-84: Local variable is hiding class field 'partitionedElevateBatchIds', see Cumulus/force-app/main/default/classes/ElevateBatchCapturer.cls: line 95 at 16-62",
    ],
    [
      "Cumulus/force-app/main/default/classes/ElevateTokenizedGift.cls",
      "Warning: line 55:8 to 56:57: Local variable is hiding class field 'productMetadata', see Cumulus/force-app/main/default/classes/ElevateTokenizedGift.cls: line 43 at 11-47",
    ],
    [
      "Cumulus/force-app/main/default/classes/GE_GiftEntryController.cls",
      "Warning: line 1256 at 8-64: Local variable is hiding class field 'batches', see Cumulus/force-app/main/default/classes/GE_GiftEntryController.cls: line 842 at 25-52",
      "Warning: line 979:8 to 984:9: Local variable is hiding class field 'templates', see Cumulus/force-app/main/default/classes/GE_GiftEntryController.cls: line 841 at 25-56",
    ],
    [
      "Cumulus/force-app/main/default/classes/GiftBatchService.cls",
      "Warning: line 228:12 to 229:99: Local variable is hiding class field 'batch', see Cumulus/force-app/main/default/classes/GiftBatchService.cls: line 169 at 16-41",
    ],
    [
      "Cumulus/force-app/main/default/classes/PS_CommitmentRequest.cls",
      "Warning: line 687 at 12-80: Local variable is hiding class field 'amount', see Cumulus/force-app/main/default/classes/PS_CommitmentRequest.cls: line 665 at 15-30",
    ],
    [
      "Cumulus/force-app/main/default/classes/RD2_AppView.cls",
      "Warning: line 68 at 8-65: Local variable is hiding class field 'parentSobjectType', see Cumulus/force-app/main/default/classes/RD2_AppView.cls: line 39 at 24-49",
    ],
    [
      "Cumulus/force-app/main/default/classes/RD2_RecurringDonationsOpp_TEST.cls",
      "Warning: line 213 at 8-55: Local variable is hiding class field 'today', see Cumulus/force-app/main/default/classes/RD2_RecurringDonationsOpp_TEST.cls: line 48 at 25-60",
      "Warning: line 402 at 8-55: Local variable is hiding class field 'today', see Cumulus/force-app/main/default/classes/RD2_RecurringDonationsOpp_TEST.cls: line 48 at 25-60",
      "Warning: line 434 at 8-55: Local variable is hiding class field 'today', see Cumulus/force-app/main/default/classes/RD2_RecurringDonationsOpp_TEST.cls: line 48 at 25-60",
      "Warning: line 469 at 8-55: Local variable is hiding class field 'today', see Cumulus/force-app/main/default/classes/RD2_RecurringDonationsOpp_TEST.cls: line 48 at 25-60",
      "Warning: line 511 at 8-55: Local variable is hiding class field 'today', see Cumulus/force-app/main/default/classes/RD2_RecurringDonationsOpp_TEST.cls: line 48 at 25-60",
      "Warning: line 543 at 8-55: Local variable is hiding class field 'today', see Cumulus/force-app/main/default/classes/RD2_RecurringDonationsOpp_TEST.cls: line 48 at 25-60",
    ],
    [
      "Cumulus/force-app/main/default/classes/RD2_StatusMappingSettings_CTRL.cls",
      "Warning: line 338 at 12-60: Local variable is hiding class field 'stateLabel', see Cumulus/force-app/main/default/classes/RD2_StatusMappingSettings_CTRL.cls: line 316 at 28-46",
    ],
    [
      "Cumulus/force-app/main/default/classes/SoftCreditsDTO.cls",
      "Warning: line 44:8 to 45:54: Local variable is hiding class field 'softCredits', see Cumulus/force-app/main/default/classes/SoftCreditsDTO.cls: line 37 at 11-36",
    ],
    [
      "Cumulus/force-app/main/default/classes/UTIL_BatchJobService.cls",
      "Warning: line 357 at 12-30: Local variable is hiding class field 'summary', see Cumulus/force-app/main/default/classes/UTIL_BatchJobService.cls: line 316 at 15-34",
      "Warning: line 414 at 12-57: Local variable is hiding class field 'percentComplete', see Cumulus/force-app/main/default/classes/UTIL_BatchJobService.cls: line 313 at 15-40",
    ],
    [
      "Cumulus/force-app/main/default/classes/UTIL_Where.cls",
      "Warning: line 561 at 12-50: Local variable is hiding class field 'values', see Cumulus/force-app/main/default/classes/UTIL_Where.cls: line 459 at 16-35",
    ],
    [
      "Cumulus/force-app/main/instrumentation/classes/SfdoInstrumentationService.cls",
      "Missing: line 107 at 8-20: No variable or type found for 'SfdoLogUtils' on 'npsp.SfdoInstrumentationService'",
      "Missing: line 118 at 8-20: No variable or type found for 'SfdoLogUtils' on 'npsp.SfdoInstrumentationService'",
      "Missing: line 128 at 8-20: No variable or type found for 'SfdoLogUtils' on 'npsp.SfdoInstrumentationService'",
      "Missing: line 137 at 8-20: No variable or type found for 'SfdoLogUtils' on 'npsp.SfdoInstrumentationService'",
      "Missing: line 63 at 8-20: No variable or type found for 'SfdoLogUtils' on 'npsp.SfdoInstrumentationService'",
      "Missing: line 74 at 8-20: No variable or type found for 'SfdoLogUtils' on 'npsp.SfdoInstrumentationService'",
      "Missing: line 84 at 8-20: No variable or type found for 'SfdoLogUtils' on 'npsp.SfdoInstrumentationService'",
      "Missing: line 93 at 8-20: No variable or type found for 'SfdoLogUtils' on 'npsp.SfdoInstrumentationService'",
    ],
    [
      "Cumulus/force-app/main/service/DonationHistoryService.cls",
      "Missing: line 77 at 15-95: Unknown field or type 'npe01__Payments_Enabled__c' on 'System.SObject'",
    ],
    [
      "Cumulus/force-app/tdtm/classes/TDTM_DMLgt200_TEST.cls",
      "Warning: line 382 at 8-30: Local variable is hiding class field 'insertCnt', see Cumulus/force-app/tdtm/classes/TDTM_DMLgt200_TEST.cls: line 51 at 25-49",
    ],
    [
      "Cumulus/force-app/test/ADDR_Addresses_TEST.cls",
      "Warning: line 139 at 8-89: Local variable is hiding class field 'testContacts', see Cumulus/force-app/test/ADDR_Addresses_TEST.cls: line 53 at 18-45",
      "Warning: line 841 at 8-89: Local variable is hiding class field 'testContacts', see Cumulus/force-app/test/ADDR_Addresses_TEST.cls: line 53 at 18-45",
    ],
  ],
  "status": 4,
}
`;

exports[`Check samples Sample: CustomMetadataLoader 1`] = `
{
  "logs": [
    [
      "custom_md_loader/classes/MetadataMapperCustom.cls",
      "Warning: line 48 at 8-55: Local variable is hiding class field 'srcFieldNames', see custom_md_loader/classes/MetadataMapperDefault.cls: line 17 at 10-37",
    ],
    [
      "custom_md_loader/classes/MetadataMapperSimple.cls",
      "Warning: line 41 at 6-53: Local variable is hiding class field 'srcFieldNames', see custom_md_loader/classes/MetadataMapperDefault.cls: line 17 at 10-37",
    ],
    [
      "custom_md_loader/classes/MetadataWrapperApiLoader.cls",
      "Error: line 27 at 8-15: Unreachable block or statement",
    ],
  ],
  "status": 4,
}
`;

exports[`Check samples Sample: EDA 1`] = `
{
  "logs": [
    [
      "force-app/main/default/classes/AFFL_MultiRecordTypeMapper.cls",
      "Warning: line 361 at 8-71: Local variable is hiding class field 'validAccRecordTypesInMappings', see force-app/main/default/classes/AFFL_MultiRecordTypeMapper.cls: line 65 at 11-54",
    ],
    [
      "force-app/main/default/classes/CCON_ConnectionBackfill_BATCH.cls",
      "Warning: line 62 at 8-83: Local variable is hiding class field 'connsToUpdate', see force-app/main/default/classes/CCON_ConnectionBackfill_BATCH.cls: line 46 at 12-53",
    ],
    [
      "force-app/main/releaseGating/classes/ReleaseGateAPIService.cls",
      "Warning: line 217 at 8-68: Local variable is hiding class field 'callableInstance', see force-app/main/releaseGating/classes/ReleaseGateAPIService.cls: line 52 at 12-38",
    ],
  ],
  "status": 0,
}
`;

exports[`Check samples Sample: EnhancedLightningGrid 1`] = `
{
  "logs": [
    [
      "classes/sdgPathParser.cls",
      "Warning: line 22 at 8-26: Local variable is hiding class field 'newpath', see classes/sdgPathParser.cls: line 10 at 12-54",
    ],
  ],
  "status": 0,
}
`;

exports[`Check samples Sample: FindNearby 1`] = `
{
  "logs": [
    [
      "FindNearby/src/classes/AGeoCode.cls",
      "Warning: line 56 at 8-28: Local variable is hiding class field 'Address', see FindNearby/src/classes/AGeoCode.cls: line 2 at 11-26",
    ],
    [
      "FindNearby/src/classes/CGeoCode.cls",
      "Warning: line 49 at 8-28: Local variable is hiding class field 'Address', see FindNearby/src/classes/CGeoCode.cls: line 2 at 11-26",
    ],
    [
      "FindNearby/src/classes/TestFindNearbyMap.cls",
      "Missing: line 6 at 32-50: Unknown field or type 'FindNearbyMap' on 'Page'",
      "Missing: line 89 at 32-50: Unknown field or type 'FindNearbyMap' on 'Page'",
    ],
    [
      "FindNearby/src/pages/FindNearbyMap.page",
      "Syntax: line 1061: extraneous input '<' expecting {<EOF>, COMMENT, WS_NL}",
      "Syntax: line 186 at 3: extraneous input '<' expecting {<EOF>, COMMENT, WS_NL}",
      "Syntax: line 187: extraneous input '<' expecting {<EOF>, COMMENT, WS_NL}",
      "Syntax: line 188 at 4: extraneous input '<' expecting {<EOF>, COMMENT, WS_NL}",
      "Syntax: line 189 at 8: extraneous input '<' expecting {<EOF>, COMMENT, WS_NL}",
      "Syntax: line 190 at 12: extraneous input '<' expecting {<EOF>, COMMENT, WS_NL}",
      "Syntax: line 191 at 8: extraneous input '<' expecting {<EOF>, COMMENT, WS_NL}",
      "Syntax: line 192 at 8: extraneous input '<' expecting {<EOF>, COMMENT, WS_NL}",
      "Syntax: line 193 at 12: extraneous input '<' expecting {<EOF>, COMMENT, WS_NL}",
      "Syntax: line 194 at 8: extraneous input '<' expecting {<EOF>, COMMENT, WS_NL}",
      "Syntax: line 195 at 8: extraneous input '<' expecting {<EOF>, COMMENT, WS_NL}",
      "Syntax: line 196 at 12: extraneous input '<' expecting {<EOF>, COMMENT, WS_NL}",
      "Syntax: line 197 at 12: extraneous input '<' expecting {<EOF>, COMMENT, WS_NL}",
      "Syntax: line 197 at 46: extraneous input '<' expecting {<EOF>, COMMENT, WS_NL}",
      "Syntax: line 199 at 8: extraneous input '<' expecting {<EOF>, COMMENT, WS_NL}",
      "Syntax: line 200 at 4: extraneous input '<' expecting {<EOF>, COMMENT, WS_NL}",
      "Syntax: line 201: extraneous input '<' expecting {<EOF>, COMMENT, WS_NL}",
      "Syntax: line 202: extraneous input '<script' expecting {<EOF>, COMMENT, WS_NL}",
      "Syntax: line 780: extraneous input '<script' expecting {<EOF>, COMMENT, WS_NL}",
    ],
  ],
  "status": 4,
}
`;

exports[`Check samples Sample: Force.com-Helper-Classes 1`] = `
{
  "logs": [
    [
      "src/classes/Async.cls",
      "Error: line 1: Type 'Async' is defined, but meta file is missing for 'src/classes/Async.cls'",
    ],
    [
      "src/classes/Async_Test.cls",
      "Error: line 1: Type 'Async_Test' is defined, but meta file is missing for 'src/classes/Async_Test.cls'",
    ],
    [
      "src/classes/InvokeUpdateTriggerBatch.cls",
      "Error: line 1: Type 'InvokeUpdateTriggerBatch' is defined, but meta file is missing for 'src/classes/InvokeUpdateTriggerBatch.cls'",
    ],
    [
      "src/classes/InvokeUpdateTriggerBatch_Test.cls",
      "Error: line 1: Type 'InvokeUpdateTriggerBatch_Test' is defined, but meta file is missing for 'src/classes/InvokeUpdateTriggerBatch_Test.cls'",
    ],
    [
      "src/classes/SearchHelper.cls",
      "Error: line 1: Type 'SearchHelper' is defined, but meta file is missing for 'src/classes/SearchHelper.cls'",
    ],
    [
      "src/classes/SearchHelper_Test.cls",
      "Error: line 1: Type 'SearchHelper_Test' is defined, but meta file is missing for 'src/classes/SearchHelper_Test.cls'",
    ],
    [
      "src/classes/StateFormatter.cls",
      "Error: line 1: Type 'StateFormatter' is defined, but meta file is missing for 'src/classes/StateFormatter.cls'",
    ],
    [
      "src/classes/StateFormatter_Test.cls",
      "Error: line 1: Type 'StateFormatter_Test' is defined, but meta file is missing for 'src/classes/StateFormatter_Test.cls'",
    ],
    [
      "src/classes/SuperMap.cls",
      "Error: line 1: Type 'SuperMap' is defined, but meta file is missing for 'src/classes/SuperMap.cls'",
    ],
    [
      "src/classes/SuperMap_Test.cls",
      "Error: line 1: Type 'SuperMap_Test' is defined, but meta file is missing for 'src/classes/SuperMap_Test.cls'",
    ],
  ],
  "status": 4,
}
`;

exports[`Check samples Sample: Force.com-Toolkit-for-Facebook 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: ForceDotComSprintWall 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: Forceea-data-factory 1`] = `
{
  "logs": [
    [
      "dx/force-app/main/default/classes/FObject.cls",
      "Warning: line 2079 at 8-81: Local variable is hiding class field 'variables', see dx/force-app/main/default/classes/FObject.cls: line 257 at 11-89",
      "Warning: line 2260 at 8-26: Local variable is hiding class field 'errors', see dx/force-app/main/default/classes/FObject.cls: line 191 at 12-51",
      "Warning: line 2294 at 8-26: Local variable is hiding class field 'errors', see dx/force-app/main/default/classes/FObject.cls: line 191 at 12-51",
      "Warning: line 2337 at 8-26: Local variable is hiding class field 'errors', see dx/force-app/main/default/classes/FObject.cls: line 191 at 12-51",
      "Warning: line 4192 at 8-59: Local variable is hiding class field 'permutationValues', see dx/force-app/main/default/classes/FObject.cls: line 227 at 11-75",
      "Warning: line 4583 at 8-50: Local variable is hiding class field 'fields', see dx/force-app/main/default/classes/FObject.cls: line 195 at 11-52",
    ],
    [
      "dx/force-app/main/default/classes/ForceeaService.cls",
      "Warning: line 493 at 8-77: Local variable is hiding class field 'info', see dx/force-app/main/default/classes/ForceeaService.cls: line 63 at 24-45",
      "Warning: line 589 at 16-68: Local variable is hiding class field 'info', see dx/force-app/main/default/classes/ForceeaService.cls: line 63 at 24-45",
    ],
  ],
  "status": 0,
}
`;

exports[`Check samples Sample: FormulaShare-DX 1`] = `
{
  "logs": [
    [
      "fs-core/main/default/classes/FormulaShareRuleAncestor.cls",
      "Warning: line 53 at 16-102: Local variable is hiding class field 'type', see fs-core/main/default/classes/FormulaShareRule.cls: line 49 at 24-36",
      "Warning: line 64 at 8-94: Local variable is hiding class field 'type', see fs-core/main/default/classes/FormulaShareRule.cls: line 49 at 24-36",
    ],
    [
      "fs-core/main/default/classes/FormulaShareRuleBottomObject.cls",
      "Warning: line 52 at 8-101: Local variable is hiding class field 'type', see fs-core/main/default/classes/FormulaShareRule.cls: line 49 at 24-36",
    ],
    [
      "fs-core/main/default/classes/FormulaShareRuleFactory.cls",
      "Warning: line 108 at 8-66: Local variable is hiding class field 'prefix', see fs-core/main/default/classes/FormulaShareRuleFactory.cls: line 13 at 19-78",
      "Warning: line 202 at 8-66: Local variable is hiding class field 'prefix', see fs-core/main/default/classes/FormulaShareRuleFactory.cls: line 13 at 19-78",
      "Warning: line 227 at 8-66: Local variable is hiding class field 'prefix', see fs-core/main/default/classes/FormulaShareRuleFactory.cls: line 13 at 19-78",
      "Warning: line 279 at 8-66: Local variable is hiding class field 'prefix', see fs-core/main/default/classes/FormulaShareRuleFactory.cls: line 13 at 19-78",
      "Warning: line 340 at 8-66: Local variable is hiding class field 'prefix', see fs-core/main/default/classes/FormulaShareRuleFactory.cls: line 13 at 19-78",
      "Warning: line 392 at 8-66: Local variable is hiding class field 'prefix', see fs-core/main/default/classes/FormulaShareRuleFactory.cls: line 13 at 19-78",
      "Warning: line 66 at 8-66: Local variable is hiding class field 'prefix', see fs-core/main/default/classes/FormulaShareRuleFactory.cls: line 13 at 19-78",
      "Warning: line 80 at 8-66: Local variable is hiding class field 'prefix', see fs-core/main/default/classes/FormulaShareRuleFactory.cls: line 13 at 19-78",
      "Warning: line 94 at 8-66: Local variable is hiding class field 'prefix', see fs-core/main/default/classes/FormulaShareRuleFactory.cls: line 13 at 19-78",
    ],
    [
      "fs-core/main/default/classes/FormulaShareRuleInlaw.cls",
      "Warning: line 45 at 8-101: Local variable is hiding class field 'type', see fs-core/main/default/classes/FormulaShareRule.cls: line 49 at 24-36",
    ],
    [
      "fs-core/main/default/classes/FormulaShareRuleSibling.cls",
      "Warning: line 53 at 12-98: Local variable is hiding class field 'type', see fs-core/main/default/classes/FormulaShareRule.cls: line 49 at 24-36",
      "Warning: line 90 at 12-105: Local variable is hiding class field 'type', see fs-core/main/default/classes/FormulaShareRule.cls: line 49 at 24-36",
    ],
    [
      "fs-core/main/default/classes/FormulaShareService.cls",
      "Warning: line 140 at 3-104: Local variable is hiding class field 'settings', see fs-core/main/default/classes/FormulaShareService.cls: line 48 at 8-44",
      "Warning: line 41 at 2-98: Local variable is hiding class field 'rules', see fs-core/main/default/classes/FormulaShareService.cls: line 64 at 22-82",
      "Warning: line 716 at 3-71: Local variable is hiding class field 'type', see fs-core/main/default/classes/FormulaShareService.cls: line 63 at 22-46",
    ],
    [
      "fs-core/main/libs/apex-common/classes/fflib_QueryFactory.cls",
      "Warning: line 406 at 2-80: Local variable is hiding class field 'relationship', see fs-core/main/libs/apex-common/classes/fflib_QueryFactory.cls: line 84 at 9-47",
    ],
    [
      "fs-core/main/libs/apex-common/classes/fflib_SObjectDescribe.cls",
      "Warning: line 189 at 3-82: Local variable is hiding class field 'token', see fs-core/main/libs/apex-common/classes/fflib_SObjectDescribe.cls: line 41 at 9-34",
    ],
    [
      "fs-core/main/libs/apex-common/classes/test/classes/fflib_ApplicationTest.cls",
      "Warning: line 382 at 2-73: Local variable is hiding class field 'unitOfWork', see fs-core/main/libs/apex-common/classes/test/classes/fflib_ApplicationTest.cls: line 482:21 to 487:40",
      "Warning: line 416:2 to 419:3: Local variable is hiding class field 'unitOfWork', see fs-core/main/libs/apex-common/classes/test/classes/fflib_ApplicationTest.cls: line 482:21 to 487:40",
    ],
    [
      "fs-core/main/libs/fflib-apex-mocks/classes/fflib_AnswerTest.cls",
      "Error: line 329 at 3-15: Unreachable block or statement",
    ],
  ],
  "status": 4,
}
`;

exports[`Check samples Sample: HEDAP 1`] = `
{
  "logs": [
    [
      "force-app/main/default/classes/AFFL_MultiRecordTypeMapper.cls",
      "Warning: line 361 at 8-71: Local variable is hiding class field 'validAccRecordTypesInMappings', see force-app/main/default/classes/AFFL_MultiRecordTypeMapper.cls: line 65 at 11-54",
    ],
    [
      "force-app/main/default/classes/CCON_ConnectionBackfill_BATCH.cls",
      "Warning: line 62 at 8-83: Local variable is hiding class field 'connsToUpdate', see force-app/main/default/classes/CCON_ConnectionBackfill_BATCH.cls: line 46 at 12-53",
    ],
    [
      "force-app/main/releaseGating/classes/ReleaseGateAPIService.cls",
      "Warning: line 217 at 8-68: Local variable is hiding class field 'callableInstance', see force-app/main/releaseGating/classes/ReleaseGateAPIService.cls: line 52 at 12-38",
    ],
  ],
  "status": 0,
}
`;

exports[`Check samples Sample: HyperBatch 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: Interactions-for-Student-Recruitment 1`] = `
{
  "logs": [
    [
      "Interactions-for-Student-Recruitment/src/classes/INT_OpportunityContactRoleHandler.cls",
      "Missing: line 11 at 19-48: No type declaration found for 'DmlWrapper'",
      "Missing: line 11 at 36-46: No type declaration found for 'DmlWrapper'",
      "Missing: line 7 at 31-34: No type declaration found for 'DmlWrapper'",
    ],
  ],
  "status": 4,
}
`;

exports[`Check samples Sample: Lightweight-Trigger-Framework 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: Milestones-PM 1`] = `
{
  "logs": [
    [
      "src/classes/Milestone1_Summary2.cls",
      "Error: line 98 at 20-32: Unreachable block or statement",
    ],
    [
      "src/classes/Milestone1_XML_Export_Utility.cls",
      "Warning: line 51 at 8-37: Local variable is hiding class field 'project', see src/classes/Milestone1_XML_Export_Utility.cls: line 31 at 12-42",
    ],
  ],
  "status": 4,
}
`;

exports[`Check samples Sample: Multi-File-Uploader-Force 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: MyTriggers 1`] = `
{
  "logs": [
    [
      "MyTriggers/framework/classes/MyTriggers.cls",
      "Warning: line 176 at 29-53: Only one visibility modifier from 'global', 'public' & 'private' should be used on methods",
      "Warning: line 176 at 29-53: Only one visibility modifier from 'global', 'public' & 'private' should be used on methods",
    ],
    [
      "MyTriggers/framework/objects/MyTriggerSetting__mdt/MyTriggerSetting__mdt.object-meta.xml",
      "Warning: line 1: SObject appears to be re-defining an SObject that already exists 'MyTriggerSetting__mdt', remove the 'label' field if it is extending the SObject",
    ],
  ],
  "status": 0,
}
`;

exports[`Check samples Sample: NPSP 1`] = `
{
  "logs": [
    [
      "NPSP/force-app/infrastructure/apex-common/main/classes/fflib_QueryFactory.cls",
      "Warning: line 406 at 2-80: Local variable is hiding class field 'relationship', see NPSP/force-app/infrastructure/apex-common/main/classes/fflib_QueryFactory.cls: line 84 at 9-47",
    ],
    [
      "NPSP/force-app/infrastructure/apex-common/main/classes/fflib_SObjectDescribe.cls",
      "Warning: line 187 at 3-82: Local variable is hiding class field 'token', see NPSP/force-app/infrastructure/apex-common/main/classes/fflib_SObjectDescribe.cls: line 41 at 9-34",
    ],
    [
      "NPSP/force-app/infrastructure/apex-common/test/classes/fflib_ApplicationTest.cls",
      "Warning: line 100:2 to 103:3: Local variable is hiding class field 'unitOfWork', see NPSP/force-app/infrastructure/apex-common/test/classes/fflib_ApplicationTest.cls: line 159:21 to 164:40",
      "Warning: line 66 at 2-73: Local variable is hiding class field 'unitOfWork', see NPSP/force-app/infrastructure/apex-common/test/classes/fflib_ApplicationTest.cls: line 159:21 to 164:40",
    ],
    [
      "NPSP/force-app/infrastructure/apex-extensions/main/application/dynamic/classes/fflib_AppBindingResolver.cls",
      "Warning: line 185 at 2-54: Local variable is hiding class field 'modules', see NPSP/force-app/infrastructure/apex-extensions/main/application/dynamic/classes/fflib_AppBindingResolver.cls: line 62 at 9-47",
      "Warning: line 206 at 3-58: Local variable is hiding class field 'bindings', see NPSP/force-app/infrastructure/apex-extensions/main/application/dynamic/classes/fflib_AppBindingResolver.cls: line 61 at 11-39",
    ],
    [
      "NPSP/force-app/main/default/classes/ADDR_CopyAddrHHObjBTN_TEST.cls",
      "Warning: line 56:8 to 62:9: Local variable is hiding class field 'householdRecord', see NPSP/force-app/main/default/classes/ADDR_CopyAddrHHObjBTN_TEST.cls: line 39 at 19-55",
      "Warning: line 65:8 to 73:9: Local variable is hiding class field 'contactRecord', see NPSP/force-app/main/default/classes/ADDR_CopyAddrHHObjBTN_TEST.cls: line 38 at 19-41",
    ],
    [
      "NPSP/force-app/main/default/classes/ALLO_PaymentSync_TEST.cls",
      "Warning: line 54:8 to 61:9: Local variable is hiding class field 'opportunity', see NPSP/force-app/main/default/classes/ALLO_PaymentSync_TEST.cls: line 43 at 11-35",
    ],
    [
      "NPSP/force-app/main/default/classes/BDI_ManageAdvancedMappingCtrl_TEST.cls",
      "Warning: line 209:8 to 213:20: Local variable is hiding class field 'account1', see NPSP/force-app/main/default/classes/BDI_ManageAdvancedMappingCtrl_TEST.cls: line 59 at 25-54",
      "Warning: line 365:8 to 369:20: Local variable is hiding class field 'account1', see NPSP/force-app/main/default/classes/BDI_ManageAdvancedMappingCtrl_TEST.cls: line 59 at 25-54",
    ],
    [
      "NPSP/force-app/main/default/classes/BDI_MigrationMappingUtility.cls",
      "Warning: line 176 at 8-102: Local variable is hiding class field 'dataImportSettings', see NPSP/force-app/main/default/classes/BDI_MigrationMappingUtility.cls: line 105 at 12-55",
      "Warning: line 178 at 8-76: Local variable is hiding class field 'helper', see NPSP/force-app/main/default/classes/BDI_MigrationMappingUtility.cls: line 99 at 12-46",
    ],
    [
      "NPSP/force-app/main/default/classes/BGE_DataImportBatchEntry_CTRL.cls",
      "Warning: line 645 at 12-53: Local variable is hiding class field 'columns', see NPSP/force-app/main/default/classes/BGE_DataImportBatchEntry_CTRL.cls: line 631 at 28-49",
      "Warning: line 674 at 12-53: Local variable is hiding class field 'columns', see NPSP/force-app/main/default/classes/BGE_DataImportBatchEntry_CTRL.cls: line 631 at 28-49",
      "Warning: line 844 at 12-33: Local variable is hiding class field 'donorName', see NPSP/force-app/main/default/classes/BGE_DataImportBatchEntry_CTRL.cls: line 830 at 28-45",
      "Warning: line 864 at 16-56: Local variable is hiding class field 'errors', see NPSP/force-app/main/default/classes/BGE_DataImportBatchEntry_CTRL.cls: line 835 at 28-48",
    ],
    [
      "NPSP/force-app/main/default/classes/CRLP_ApiService.cls",
      "Warning: line 247 at 8-58: Local variable is hiding class field 'changedRollupTypes', see NPSP/force-app/main/default/classes/CRLP_ApiService.cls: line 43 at 12-63",
      "Warning: line 269 at 8-58: Local variable is hiding class field 'changedRollupTypes', see NPSP/force-app/main/default/classes/CRLP_ApiService.cls: line 43 at 12-63",
    ],
    [
      "NPSP/force-app/main/default/classes/CRLP_RollupCMT.cls",
      "Warning: line 222 at 12-37: Local variable is hiding class field 'label', see NPSP/force-app/main/default/classes/CRLP_RollupCMT.cls: line 176 at 15-28",
      "Warning: line 258 at 12-37: Local variable is hiding class field 'label', see NPSP/force-app/main/default/classes/CRLP_RollupCMT.cls: line 176 at 15-28",
    ],
    [
      "NPSP/force-app/main/default/classes/ElevateBatchCapturer.cls",
      "Warning: line 124 at 12-84: Local variable is hiding class field 'partitionedElevateBatchIds', see NPSP/force-app/main/default/classes/ElevateBatchCapturer.cls: line 95 at 16-62",
    ],
    [
      "NPSP/force-app/main/default/classes/ElevateTokenizedGift.cls",
      "Warning: line 55:8 to 56:57: Local variable is hiding class field 'productMetadata', see NPSP/force-app/main/default/classes/ElevateTokenizedGift.cls: line 43 at 11-47",
    ],
    [
      "NPSP/force-app/main/default/classes/GE_GiftEntryController.cls",
      "Warning: line 1256 at 8-64: Local variable is hiding class field 'batches', see NPSP/force-app/main/default/classes/GE_GiftEntryController.cls: line 842 at 25-52",
      "Warning: line 979:8 to 984:9: Local variable is hiding class field 'templates', see NPSP/force-app/main/default/classes/GE_GiftEntryController.cls: line 841 at 25-56",
    ],
    [
      "NPSP/force-app/main/default/classes/GiftBatchService.cls",
      "Warning: line 228:12 to 229:99: Local variable is hiding class field 'batch', see NPSP/force-app/main/default/classes/GiftBatchService.cls: line 169 at 16-41",
    ],
    [
      "NPSP/force-app/main/default/classes/PS_CommitmentRequest.cls",
      "Warning: line 687 at 12-80: Local variable is hiding class field 'amount', see NPSP/force-app/main/default/classes/PS_CommitmentRequest.cls: line 665 at 15-30",
    ],
    [
      "NPSP/force-app/main/default/classes/RD2_AppView.cls",
      "Warning: line 68 at 8-65: Local variable is hiding class field 'parentSobjectType', see NPSP/force-app/main/default/classes/RD2_AppView.cls: line 39 at 24-49",
    ],
    [
      "NPSP/force-app/main/default/classes/RD2_RecurringDonationsOpp_TEST.cls",
      "Warning: line 213 at 8-55: Local variable is hiding class field 'today', see NPSP/force-app/main/default/classes/RD2_RecurringDonationsOpp_TEST.cls: line 48 at 25-60",
      "Warning: line 402 at 8-55: Local variable is hiding class field 'today', see NPSP/force-app/main/default/classes/RD2_RecurringDonationsOpp_TEST.cls: line 48 at 25-60",
      "Warning: line 434 at 8-55: Local variable is hiding class field 'today', see NPSP/force-app/main/default/classes/RD2_RecurringDonationsOpp_TEST.cls: line 48 at 25-60",
      "Warning: line 469 at 8-55: Local variable is hiding class field 'today', see NPSP/force-app/main/default/classes/RD2_RecurringDonationsOpp_TEST.cls: line 48 at 25-60",
      "Warning: line 511 at 8-55: Local variable is hiding class field 'today', see NPSP/force-app/main/default/classes/RD2_RecurringDonationsOpp_TEST.cls: line 48 at 25-60",
      "Warning: line 543 at 8-55: Local variable is hiding class field 'today', see NPSP/force-app/main/default/classes/RD2_RecurringDonationsOpp_TEST.cls: line 48 at 25-60",
    ],
    [
      "NPSP/force-app/main/default/classes/RD2_StatusMappingSettings_CTRL.cls",
      "Warning: line 338 at 12-60: Local variable is hiding class field 'stateLabel', see NPSP/force-app/main/default/classes/RD2_StatusMappingSettings_CTRL.cls: line 316 at 28-46",
    ],
    [
      "NPSP/force-app/main/default/classes/SoftCreditsDTO.cls",
      "Warning: line 44:8 to 45:54: Local variable is hiding class field 'softCredits', see NPSP/force-app/main/default/classes/SoftCreditsDTO.cls: line 37 at 11-36",
    ],
    [
      "NPSP/force-app/main/default/classes/UTIL_BatchJobService.cls",
      "Warning: line 357 at 12-30: Local variable is hiding class field 'summary', see NPSP/force-app/main/default/classes/UTIL_BatchJobService.cls: line 316 at 15-34",
      "Warning: line 414 at 12-57: Local variable is hiding class field 'percentComplete', see NPSP/force-app/main/default/classes/UTIL_BatchJobService.cls: line 313 at 15-40",
    ],
    [
      "NPSP/force-app/main/default/classes/UTIL_Where.cls",
      "Warning: line 561 at 12-50: Local variable is hiding class field 'values', see NPSP/force-app/main/default/classes/UTIL_Where.cls: line 459 at 16-35",
    ],
    [
      "NPSP/force-app/main/instrumentation/classes/SfdoInstrumentationService.cls",
      "Missing: line 107 at 8-20: No variable or type found for 'SfdoLogUtils' on 'npsp.SfdoInstrumentationService'",
      "Missing: line 118 at 8-20: No variable or type found for 'SfdoLogUtils' on 'npsp.SfdoInstrumentationService'",
      "Missing: line 128 at 8-20: No variable or type found for 'SfdoLogUtils' on 'npsp.SfdoInstrumentationService'",
      "Missing: line 137 at 8-20: No variable or type found for 'SfdoLogUtils' on 'npsp.SfdoInstrumentationService'",
      "Missing: line 63 at 8-20: No variable or type found for 'SfdoLogUtils' on 'npsp.SfdoInstrumentationService'",
      "Missing: line 74 at 8-20: No variable or type found for 'SfdoLogUtils' on 'npsp.SfdoInstrumentationService'",
      "Missing: line 84 at 8-20: No variable or type found for 'SfdoLogUtils' on 'npsp.SfdoInstrumentationService'",
      "Missing: line 93 at 8-20: No variable or type found for 'SfdoLogUtils' on 'npsp.SfdoInstrumentationService'",
    ],
    [
      "NPSP/force-app/main/service/DonationHistoryService.cls",
      "Missing: line 77 at 15-95: Unknown field or type 'npe01__Payments_Enabled__c' on 'System.SObject'",
    ],
    [
      "NPSP/force-app/tdtm/classes/TDTM_DMLgt200_TEST.cls",
      "Warning: line 382 at 8-30: Local variable is hiding class field 'insertCnt', see NPSP/force-app/tdtm/classes/TDTM_DMLgt200_TEST.cls: line 51 at 25-49",
    ],
    [
      "NPSP/force-app/test/ADDR_Addresses_TEST.cls",
      "Warning: line 139 at 8-89: Local variable is hiding class field 'testContacts', see NPSP/force-app/test/ADDR_Addresses_TEST.cls: line 53 at 18-45",
      "Warning: line 841 at 8-89: Local variable is hiding class field 'testContacts', see NPSP/force-app/test/ADDR_Addresses_TEST.cls: line 53 at 18-45",
    ],
  ],
  "status": 4,
}
`;

exports[`Check samples Sample: NebulaLogger 1`] = `
{
  "logs": [
    [
      "nebula-logger/core/main/configuration/classes/LoggerCache.cls",
      "Error: line 20:114 to 22:5: Constructor not defined: LoggerCache.PlatformCachePartitionDelegate.<constructor>(cache.OrgPartition)",
      "Error: line 23:109 to 25:5: Constructor not defined: LoggerCache.PlatformCachePartitionDelegate.<constructor>(cache.SessionPartition)",
    ],
    [
      "nebula-logger/core/main/log-management/classes/LogBatchPurgeController_Tests.cls",
      "Error: line 105 at 16-73: Exact equality/inequality requires is not supported on non-reference types 'System.String'",
      "Error: line 112 at 16-72: Exact equality/inequality requires is not supported on non-reference types 'System.String'",
      "Error: line 135 at 16-73: Exact equality/inequality requires is not supported on non-reference types 'System.String'",
      "Error: line 142 at 16-72: Exact equality/inequality requires is not supported on non-reference types 'System.String'",
      "Error: line 166 at 16-73: Exact equality/inequality requires is not supported on non-reference types 'System.String'",
      "Error: line 173 at 16-72: Exact equality/inequality requires is not supported on non-reference types 'System.String'",
      "Error: line 197 at 16-73: Exact equality/inequality requires is not supported on non-reference types 'System.String'",
      "Error: line 204 at 16-72: Exact equality/inequality requires is not supported on non-reference types 'System.String'",
      "Error: line 227 at 16-73: Exact equality/inequality requires is not supported on non-reference types 'System.String'",
      "Error: line 234 at 16-72: Exact equality/inequality requires is not supported on non-reference types 'System.String'",
      "Error: line 257 at 16-73: Exact equality/inequality requires is not supported on non-reference types 'System.String'",
      "Error: line 264 at 16-72: Exact equality/inequality requires is not supported on non-reference types 'System.String'",
      "Error: line 287 at 16-73: Exact equality/inequality requires is not supported on non-reference types 'System.String'",
      "Error: line 294 at 16-72: Exact equality/inequality requires is not supported on non-reference types 'System.String'",
      "Error: line 50 at 16-73: Exact equality/inequality requires is not supported on non-reference types 'System.String'",
      "Error: line 57 at 16-72: Exact equality/inequality requires is not supported on non-reference types 'System.String'",
      "Error: line 82 at 16-73: Exact equality/inequality requires is not supported on non-reference types 'System.String'",
      "Error: line 85 at 16-72: Exact equality/inequality requires is not supported on non-reference types 'System.String'",
    ],
    [
      "nebula-logger/core/main/log-management/classes/LogEntryEventHandler.cls",
      "Missing: line 237 at 31-54: Unknown field 'EventUuid' on SObject 'Schema.LogEntryEvent__e'",
    ],
    [
      "nebula-logger/core/main/log-management/classes/LogHandler.cls",
      "Warning: line 248 at 8-89: Local variable is hiding class field 'loggerScenariosById', see nebula-logger/core/main/log-management/classes/LogHandler.cls: line 18 at 12-59",
    ],
    [
      "nebula-logger/core/main/log-management/classes/LoggerSettingsController.cls",
      "Missing: line 297 at 18-43: Unknown field 'SetupOwner' on SObject 'Schema.LoggerSettings__c'",
      "Missing: line 305 at 33-58: Unknown field 'SetupOwner' on SObject 'Schema.LoggerSettings__c'",
      "Missing: line 62 at 50-75: Unknown field 'SetupOwner' on SObject 'Schema.LoggerSettings__c'",
    ],
    [
      "nebula-logger/core/main/logger-engine/classes/Logger.cls",
      "Warning: line 2682 at 12-62: Local variable is hiding class field 'userSettings', see nebula-logger/core/main/logger-engine/classes/Logger.cls: line 36 at 19-50",
    ],
    [
      "nebula-logger/core/tests/configuration/classes/LoggerParameter_Tests.cls",
      "Missing: line 214 at 33-102: Unknown field or type 'Value__c' on 'System.SObject'",
    ],
    [
      "nebula-logger/core/tests/log-management/classes/LogEntryEventHandler_Tests.cls",
      "Missing: line 362 at 37-68: Unknown field 'EventUuid' on SObject 'Schema.LogEntryEvent__e'",
      "Missing: line 367 at 89-120: Unknown field 'EventUuid' on SObject 'Schema.LogEntryEvent__e'",
      "Missing: line 379 at 71-102: Unknown field 'EventUuid' on SObject 'Schema.LogEntryEvent__e'",
      "Missing: line 578 at 37-60: Unknown field 'EventUuid' on SObject 'Schema.LogEntryEvent__e'",
      "Missing: line 615 at 37-60: Unknown field 'EventUuid' on SObject 'Schema.LogEntryEvent__e'",
      "Missing: line 971 at 12-45: Unknown field 'EventUuid' on SObject 'Schema.LogEntryEvent__e'",
    ],
    [
      "nebula-logger/plugins/big-object-archiving/plugin/classes/LogEntryArchiveBuilder.cls",
      "Missing: line 318 at 40-77: Unknown field 'SObjectType' on SObject 'Schema.LogEntryArchive__b'",
      "Missing: line 61 at 27-55: Unknown field 'EventUuid' on SObject 'Schema.LogEntryEvent__e'",
    ],
    [
      "nebula-logger/plugins/big-object-archiving/plugin/classes/LogEntryArchiveBuilder_Tests.cls",
      "Missing: line 119 at 28-47: Unknown field 'EventUuid' on SObject 'Schema.LogEntryEvent__e'",
      "Missing: line 15 at 89-122: Unknown field 'EventUuid' on SObject 'Schema.LogEntryEvent__e'",
      "Missing: line 31 at 89-122: Unknown field 'EventUuid' on SObject 'Schema.LogEntryEvent__e'",
      "Missing: line 46 at 89-122: Unknown field 'EventUuid' on SObject 'Schema.LogEntryEvent__e'",
    ],
    [
      "nebula-logger/plugins/log-retention-rules/plugin/classes/LogRetentionFilter.cls",
      "Warning: line 106 at 12-127: Local variable is hiding class field 'conditionsLogic', see nebula-logger/plugins/log-retention-rules/plugin/classes/LogRetentionFilter.cls: line 47 at 16-39",
      "Warning: line 414 at 16-78: Local variable is hiding class field 'fieldDescribe', see nebula-logger/plugins/log-retention-rules/plugin/classes/LogRetentionFilter.cls: line 394 at 16-57",
    ],
    [
      "nebula-logger/recipes/classes/Account_Queueable_Logger_Example.cls",
      "Warning: line 50 at 12-137: Local variable is hiding class field 'parentLogTransactionId', see nebula-logger/recipes/classes/Account_Queueable_Logger_Example.cls: line 12 at 12-42",
    ],
    [
      "sfdx-project.json",
      "Warning: line 28 at 16: Package dependency for 'Nebula Logger - Core@4.7.2-parent-log-transaction-id-bugfix' ignored as metadata is not available for analysis.",
      "Warning: line 40 at 16: Package dependency for 'Nebula Logger - Core@4.7.1-plugin-framework-overhaul' ignored as metadata is not available for analysis.",
      "Warning: line 53 at 16: Package dependency for 'Nebula Logger - Core@4.7.1-plugin-framework-overhaul' ignored as metadata is not available for analysis.",
      "Warning: line 66 at 16: Package dependency for 'Nebula Logger - Core@4.6.12-log-scenario-rules' ignored as metadata is not available for analysis.",
      "Warning: line 79 at 16: Package dependency for 'Nebula Logger - Core@4.7.1-plugin-framework-overhaul' ignored as metadata is not available for analysis.",
    ],
  ],
  "status": 4,
}
`;

exports[`Check samples Sample: ObjectMerge 1`] = `
{
  "logs": [
    [
      "src/classes/ObjectMergeHandleUsers.cls",
      "Warning: line 158 at 8-62: Local variable is hiding class field 'userIdsToDeactivate', see src/classes/ObjectMergeHandleUsers.cls: line 35 at 12-40",
      "Warning: line 41 at 8-39: Local variable is hiding class field 'pairIds', see src/classes/ObjectMergeHandleUsers.cls: line 34 at 12-28",
      "Warning: line 58 at 12-55: Local variable is hiding class field 'userIdsToDeactivate', see src/classes/ObjectMergeHandleUsers.cls: line 35 at 12-40",
      "Warning: line 80 at 16-58: Local variable is hiding class field 'ownerIdMap', see src/classes/ObjectMergeHandleUsers.cls: line 36 at 12-35",
    ],
    [
      "src/classes/ObjectMergeUtility.cls",
      "Warning: line 229 at 16-60: Local variable is hiding class field 'fieldNames', see src/classes/ObjectMergeUtility.cls: line 215 at 16-34",
      "Warning: line 230 at 16-53: Local variable is hiding class field 'ids', see src/classes/ObjectMergeUtility.cls: line 216 at 16-27",
    ],
  ],
  "status": 0,
}
`;

exports[`Check samples Sample: Query.apex 1`] = `
{
  "logs": [
    [
      "src/classes/Query.cls",
      "Warning: line 2206 at 8-25: Local variable is hiding class field 'count', see src/classes/Query.cls: line 1736 at 18-41",
    ],
  ],
  "status": 0,
}
`;

exports[`Check samples Sample: R-apex 1`] = `
{
  "logs": [
    [
      "force-app/main/default/classes/R.cls",
      "Warning: line 10182 at 12-43: Local variable is hiding class field 'first', see force-app/main/default/classes/R.cls: line 4322 at 18-47",
      "Warning: line 10373 at 12-90: Local variable is hiding class field 'length', see force-app/main/default/classes/Func.cls: line 109 at 12-32",
      "Warning: line 10447 at 12-42: Local variable is hiding class field 'size', see force-app/main/default/classes/R.cls: line 3701 at 18-39",
      "Warning: line 10481 at 12-44: Local variable is hiding class field 'length', see force-app/main/default/classes/Func.cls: line 109 at 12-32",
      "Warning: line 7976 at 12-43: Local variable is hiding class field 'first', see force-app/main/default/classes/R.cls: line 4322 at 18-47",
      "Warning: line 7977 at 12-31: Local variable is hiding class field 'last', see force-app/main/default/classes/R.cls: line 4341 at 18-45",
      "Warning: line 7980 at 16-43: Local variable is hiding class field 'size', see force-app/main/default/classes/R.cls: line 3701 at 18-39",
      "Warning: line 7994 at 16-47: Local variable is hiding class field 'size', see force-app/main/default/classes/R.cls: line 3701 at 18-39",
      "Warning: line 8011 at 12-43: Local variable is hiding class field 'first', see force-app/main/default/classes/R.cls: line 4322 at 18-47",
      "Warning: line 8012 at 12-42: Local variable is hiding class field 'last', see force-app/main/default/classes/R.cls: line 4341 at 18-45",
      "Warning: line 8015 at 16-43: Local variable is hiding class field 'size', see force-app/main/default/classes/R.cls: line 3701 at 18-39",
      "Warning: line 8030 at 16-47: Local variable is hiding class field 'size', see force-app/main/default/classes/R.cls: line 3701 at 18-39",
      "Warning: line 8241 at 12-42: Local variable is hiding class field 'comparator', see force-app/main/default/classes/R.cls: line 3437 at 18-57",
    ],
  ],
  "status": 0,
}
`;

exports[`Check samples Sample: SFDCRules 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: SObjectFabricator 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: Salesforce-Lookup-Rollup-Summaries 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: Salesforce-Test-Factory 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: SalesforceDurableStreamingDemo 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: SimpleLightningComponents 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: SmartFactory-for-Force 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: TestDataFactory 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: TriggerX 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: Visualforce-Multiselect-Picklist 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: Volunteers-for-Salesforce 1`] = `
{
  "logs": [
    [
      "src/classes/UTIL_JobProgress_CTRL.cls",
      "Warning: line 231 at 12-37: Local variable is hiding class field 'percentCompleted', see src/classes/UTIL_JobProgress_CTRL.cls: line 194 at 15-37",
    ],
    [
      "src/objects/Campaign.object",
      "Error: line 101: Related field 'Volunteer_Job__c.Number_of_Shifts__c' required by Schema.Campaign is not defined",
    ],
  ],
  "status": 4,
}
`;

exports[`Check samples Sample: Zippex 1`] = `
{
  "logs": [
    [
      "classes/Puff.cls",
      "Warning: line 594 at 8-49: Local variable is hiding class field 'lencnt', see classes/Puff.cls: line 460 at 12-54",
      "Warning: line 595 at 8-49: Local variable is hiding class field 'lensym', see classes/Puff.cls: line 460 at 12-87",
      "Warning: line 596 at 8-50: Local variable is hiding class field 'distcnt', see classes/Puff.cls: line 461 at 12-55",
      "Warning: line 597 at 8-50: Local variable is hiding class field 'distsym', see classes/Puff.cls: line 461 at 12-89",
      "Warning: line 598 at 8-39: Local variable is hiding class field 'lencode', see classes/Puff.cls: line 462 at 12-44",
      "Warning: line 599 at 8-40: Local variable is hiding class field 'distcode', see classes/Puff.cls: line 462 at 12-70",
    ],
  ],
  "status": 0,
}
`;

exports[`Check samples Sample: amoss 1`] = `
{
  "logs": [
    [
      "force-app/amoss_main/default/classes/Amoss_Instance.cls",
      "Warning: line 4662 at 12-132: Local variable is hiding class field 'message', see force-app/amoss_main/default/classes/Amoss_Instance.cls: line 4601 at 16-31",
    ],
  ],
  "status": 0,
}
`;

exports[`Check samples Sample: apex-dml-manager 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: apex-domainbuilder 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: apex-lambda 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: apex-mdapi 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: apex-query-builder 1`] = `
{
  "logs": [
    [
      "src/classes/QueryBuilder.cls",
      "Warning: line 1481 at 8-33: Local variable is hiding class field 'result', see src/classes/QueryBuilder.cls: line 61 at 12-33",
      "Warning: line 1547 at 8-33: Local variable is hiding class field 'result', see src/classes/QueryBuilder.cls: line 61 at 12-33",
      "Warning: line 1586 at 12-66: Local variable is hiding class field 'result', see src/classes/QueryBuilder.cls: line 61 at 12-33",
      "Warning: line 1632 at 8-44: Local variable is hiding class field 'result', see src/classes/QueryBuilder.cls: line 61 at 12-33",
      "Warning: line 1665 at 8-38: Local variable is hiding class field 'result', see src/classes/QueryBuilder.cls: line 61 at 12-33",
      "Warning: line 1684 at 8-48: Local variable is hiding class field 'result', see src/classes/QueryBuilder.cls: line 61 at 12-33",
      "Warning: line 1699 at 8-48: Local variable is hiding class field 'result', see src/classes/QueryBuilder.cls: line 61 at 12-33",
      "Warning: line 1721 at 8-64: Local variable is hiding class field 'result', see src/classes/QueryBuilder.cls: line 61 at 12-33",
      "Warning: line 780 at 8-46: Local variable is hiding class field 'result', see src/classes/QueryBuilder.cls: line 61 at 12-33",
    ],
  ],
  "status": 0,
}
`;

exports[`Check samples Sample: apex-recipes 1`] = `
{
  "logs": [
    [
      "force-app/tests/Shared Code/OrgShape_Tests.cls",
      "Warning: line 182 at 8-42: Local variable is hiding class field 'orgShape', see force-app/tests/Shared Code/OrgShape_Tests.cls: line 3 at 19-37",
    ],
  ],
  "status": 0,
}
`;

exports[`Check samples Sample: apex-rest-route 1`] = `
{
  "logs": [
    [
      "force-app/main/default/classes/RestRouteTestRoutes.cls",
      "Warning: line 40 at 12-48: Local variable is hiding class field 'companies', see force-app/main/default/classes/RestRouteTestRoutes.cls: line 176 at 17-127",
    ],
  ],
  "status": 0,
}
`;

exports[`Check samples Sample: apex-rollup 1`] = `
{
  "logs": [
    [
      "extra-tests/classes/RollupEvaluatorTests.cls",
      "Syntax: line 1003 at 1: extraneous input '<EOF>'",
      "Syntax: line 1006 at 67: extraneous input ')' expecting '{'",
      "Syntax: line 1010 at 1: extraneous input '<EOF>'",
      "Syntax: line 1013 at 62: extraneous input ')' expecting '{'",
      "Syntax: line 1020 at 1: extraneous input '<EOF>'",
      "Syntax: line 1023 at 49: extraneous input ')' expecting '{'",
      "Syntax: line 1029 at 1: extraneous input '<EOF>'",
      "Syntax: line 1032 at 50: extraneous input ')' expecting '{'",
      "Syntax: line 1037 at 1: extraneous input '<EOF>'",
      "Syntax: line 1040 at 51: extraneous input ')' expecting '{'",
      "Syntax: line 1046 at 1: extraneous input '<EOF>'",
      "Syntax: line 1049 at 59: extraneous input ')' expecting '{'",
      "Syntax: line 1054 at 1: extraneous input '<EOF>'",
      "Syntax: line 1057 at 84: extraneous input ')' expecting '{'",
      "Syntax: line 1061 at 1: extraneous input '<EOF>'",
      "Syntax: line 1064 at 68: extraneous input ')' expecting '{'",
      "Syntax: line 1068 at 1: extraneous input '<EOF>'",
      "Syntax: line 1071 at 35: extraneous input ')' expecting '{'",
      "Syntax: line 1090 at 1: extraneous input '<EOF>'",
      "Syntax: line 1093 at 50: extraneous input ')' expecting '{'",
      "Syntax: line 1100 at 1: extraneous input '<EOF>'",
      "Syntax: line 1103 at 61: extraneous input ')' expecting '{'",
      "Syntax: line 1111 at 1: extraneous input '<EOF>'",
      "Syntax: line 1114 at 64: extraneous input ')' expecting '{'",
      "Syntax: line 1121 at 1: extraneous input '<EOF>'",
      "Syntax: line 534 at 1: extraneous input '<EOF>'",
      "Syntax: line 537 at 71: extraneous input ')' expecting '{'",
      "Syntax: line 546 at 1: extraneous input '<EOF>'",
      "Syntax: line 549 at 90: extraneous input ')' expecting '{'",
      "Syntax: line 570 at 1: extraneous input '<EOF>'",
      "Syntax: line 573 at 64: extraneous input ')' expecting '{'",
      "Syntax: line 586 at 1: extraneous input '<EOF>'",
      "Syntax: line 589 at 74: extraneous input ')' expecting '{'",
      "Syntax: line 603 at 1: extraneous input '<EOF>'",
      "Syntax: line 606 at 45: extraneous input ')' expecting '{'",
      "Syntax: line 625 at 1: extraneous input '<EOF>'",
      "Syntax: line 628 at 80: extraneous input ')' expecting '{'",
      "Syntax: line 646 at 1: extraneous input '<EOF>'",
      "Syntax: line 649 at 97: extraneous input ')' expecting '{'",
      "Syntax: line 674 at 1: extraneous input '<EOF>'",
      "Syntax: line 677 at 77: extraneous input ')' expecting '{'",
      "Syntax: line 682 at 1: extraneous input '<EOF>'",
      "Syntax: line 685 at 64: extraneous input ')' expecting '{'",
      "Syntax: line 690 at 1: extraneous input '<EOF>'",
      "Syntax: line 693 at 47: extraneous input ')' expecting '{'",
      "Syntax: line 697 at 1: extraneous input '<EOF>'",
      "Syntax: line 701 at 68: extraneous input ')' expecting '{'",
      "Syntax: line 703 at 1: extraneous input '<EOF>'",
      "Syntax: line 707 at 69: extraneous input ')' expecting '{'",
      "Syntax: line 709 at 1: extraneous input '<EOF>'",
      "Syntax: line 713 at 66: extraneous input ')' expecting '{'",
      "Syntax: line 715 at 1: extraneous input '<EOF>'",
      "Syntax: line 717 at 109: extraneous input ')' expecting '{'",
      "Syntax: line 729 at 1: extraneous input '<EOF>'",
      "Syntax: line 732 at 45: extraneous input ')' expecting '{'",
      "Syntax: line 763 at 1: extraneous input '<EOF>'",
      "Syntax: line 766 at 89: extraneous input ')' expecting '{'",
      "Syntax: line 794 at 1: extraneous input '<EOF>'",
      "Syntax: line 797 at 80: extraneous input ')' expecting '{'",
      "Syntax: line 825 at 1: extraneous input '<EOF>'",
      "Syntax: line 828 at 46: extraneous input ')' expecting '{'",
      "Syntax: line 854 at 1: extraneous input '<EOF>'",
      "Syntax: line 857 at 65: extraneous input ')' expecting '{'",
      "Syntax: line 887 at 1: extraneous input '<EOF>'",
      "Syntax: line 890 at 71: extraneous input ')' expecting '{'",
      "Syntax: line 915 at 1: extraneous input '<EOF>'",
      "Syntax: line 918 at 42: extraneous input ')' expecting '{'",
      "Syntax: line 926 at 1: extraneous input '<EOF>'",
      "Syntax: line 929 at 52: extraneous input ')' expecting '{'",
      "Syntax: line 935 at 1: extraneous input '<EOF>'",
      "Syntax: line 938 at 59: extraneous input ')' expecting '{'",
      "Syntax: line 944 at 1: extraneous input '<EOF>'",
      "Syntax: line 947 at 56: extraneous input ')' expecting '{'",
      "Syntax: line 953 at 1: extraneous input '<EOF>'",
      "Syntax: line 956 at 67: extraneous input ')' expecting '{'",
      "Syntax: line 962 at 1: extraneous input '<EOF>'",
      "Syntax: line 965 at 52: extraneous input ')' expecting '{'",
      "Syntax: line 971 at 1: extraneous input '<EOF>'",
      "Syntax: line 974 at 59: extraneous input ')' expecting '{'",
      "Syntax: line 982 at 1: extraneous input '<EOF>'",
      "Syntax: line 985 at 57: extraneous input ')' expecting '{'",
      "Syntax: line 996 at 1: extraneous input '<EOF>'",
      "Syntax: line 999 at 64: extraneous input ')' expecting '{'",
    ],
    [
      "extra-tests/classes/RollupFullRecalcTests.cls",
      "Syntax: line 1836 at 1: extraneous input '<EOF>'",
      "Syntax: line 1839 at 91: extraneous input ')' expecting '{'",
      "Syntax: line 1880 at 1: extraneous input '<EOF>'",
      "Syntax: line 1883 at 90: extraneous input ')' expecting '{'",
      "Syntax: line 1930 at 1: extraneous input '<EOF>'",
      "Syntax: line 1933 at 97: extraneous input ')' expecting '{'",
      "Syntax: line 1984 at 1: extraneous input '<EOF>'",
      "Syntax: line 1987 at 67: extraneous input ')' expecting '{'",
      "Syntax: line 2032 at 1: extraneous input '<EOF>'",
      "Syntax: line 2035 at 72: extraneous input ')' expecting '{'",
      "Syntax: line 2080 at 1: extraneous input '<EOF>'",
      "Syntax: line 2083 at 57: extraneous input ')' expecting '{'",
      "Syntax: line 2130 at 1: extraneous input '<EOF>'",
      "Syntax: line 2133 at 51: extraneous input ')' expecting '{'",
      "Syntax: line 2167 at 1: extraneous input '<EOF>'",
      "Syntax: line 2170 at 61: extraneous input ')' expecting '{'",
      "Syntax: line 2195 at 1: extraneous input '<EOF>'",
      "Syntax: line 2198 at 60: extraneous input ')' expecting '{'",
      "Syntax: line 2247 at 1: extraneous input '<EOF>'",
      "Syntax: line 2250 at 57: extraneous input ')' expecting '{'",
      "Syntax: line 2299 at 1: extraneous input '<EOF>'",
      "Syntax: line 2302 at 53: extraneous input ')' expecting '{'",
      "Syntax: line 2329 at 1: extraneous input '<EOF>'",
      "Syntax: line 2332 at 50: extraneous input ')' expecting '{'",
      "Syntax: line 2359 at 1: extraneous input '<EOF>'",
      "Syntax: line 2362 at 70: extraneous input ')' expecting '{'",
      "Syntax: line 2391 at 1: extraneous input '<EOF>'",
      "Syntax: line 2394 at 74: extraneous input ')' expecting '{'",
      "Syntax: line 2419 at 1: extraneous input '<EOF>'",
      "Syntax: line 2422 at 58: extraneous input ')' expecting '{'",
      "Syntax: line 2448 at 1: extraneous input '<EOF>'",
      "Syntax: line 2451 at 60: extraneous input ')' expecting '{'",
      "Syntax: line 2516 at 1: extraneous input '<EOF>'",
      "Syntax: line 2519 at 92: extraneous input ')' expecting '{'",
      "Syntax: line 2530 at 3: extraneous input '<EOF>'",
    ],
    [
      "extra-tests/classes/RollupQueryBuilderTests.cls",
      "Warning: line 20 at 4-42: Local variable is hiding class field 'objIds', see extra-tests/classes/RollupQueryBuilderTests.cls: line 4 at 23-62",
      "Warning: line 71 at 4-34: Local variable is hiding class field 'objIds', see extra-tests/classes/RollupQueryBuilderTests.cls: line 4 at 23-62",
      "Warning: line 90 at 4-34: Local variable is hiding class field 'objIds', see extra-tests/classes/RollupQueryBuilderTests.cls: line 4 at 23-62",
    ],
    [
      "rollup/core/classes/RollupAsyncProcessor.cls",
      "Warning: line 794 at 4-82: Local variable is hiding class field 'isDeferralAllowed', see rollup/core/classes/Rollup.cls: line 32 at 17-50",
    ],
    [
      "rollup/core/classes/RollupCalcItemReplacer.cls",
      "Warning: line 236 at 4-76: Local variable is hiding class field 'parentQueryFields', see rollup/core/classes/RollupCalcItemReplacer.cls: line 12 at 16-64",
    ],
    [
      "rollup/core/classes/RollupCalculator.cls",
      "Warning: line 420 at 6-95: Local variable is hiding class field 'defaultVal', see rollup/core/classes/RollupCalculator.cls: line 8 at 18-36",
      "Warning: line 790 at 6-96: Local variable is hiding class field 'defaultVal', see rollup/core/classes/RollupCalculator.cls: line 8 at 18-36",
    ],
    [
      "rollup/core/classes/RollupFullRecalcProcessor.cls",
      "Warning: line 158 at 8-91: Local variable is hiding class field 'specificControl', see rollup/core/classes/Rollup.cls: line 19 at 17-52",
    ],
    [
      "rollup/core/classes/RollupLogger.cls",
      "Warning: line 115 at 6-47: Local variable is hiding class field 'plugin', see rollup/core/classes/RollupLogger.cls: line 6 at 23-64",
    ],
    [
      "rollup/core/classes/RollupSObjectUpdater.cls",
      "Warning: line 84 at 4-59: Local variable is hiding class field 'dispatchers', see rollup/core/classes/RollupSObjectUpdater.cls: line 8 at 16-46",
    ],
    [
      "sfdx-project.json",
      "Warning: line 19 at 16: Package dependency for 'apex-rollup@1.4.7-0' ignored as metadata is not available for analysis.",
      "Warning: line 35 at 16: Package dependency for 'apex-rollup@1.5.20-0' ignored as metadata is not available for analysis.",
      "Warning: line 38 at 16: Package dependency for 'Nebula Logger - Core@4.8.0-NEXT-ignore-origin-method' ignored as metadata is not available for analysis.",
      "Warning: line 54 at 16: Package dependency for 'apex-rollup@1.3.23-0' ignored as metadata is not available for analysis.",
      "Warning: line 74 at 16: Package dependency for 'apex-rollup@1.5.27-0' ignored as metadata is not available for analysis.",
    ],
  ],
  "status": 4,
}
`;

exports[`Check samples Sample: apex-sobjectdataloader 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: apex-toolingapi 1`] = `
{
  "logs": [
    [
      "examples/code_coverage_chart/src/classes/CodeCoverageChartCtrl.cls",
      "Error: line 1: Type 'CodeCoverageChartCtrl' is defined, but meta file is missing for 'examples/code_coverage_chart/src/classes/CodeCoverageChartCtrl.cls'",
    ],
  ],
  "status": 4,
}
`;

exports[`Check samples Sample: apex-trigger-actions-framework 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: apex-unified-logging 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: at4dx 1`] = `
{
  "logs": [
    [
      "at4dx/sfdx-source/core/test/classes/framework-application-factory/ApplicationSObjectSelectorTest.cls",
      "Warning: line 86 at 12-92: Local variable is hiding class field 'params', see at4dx/sfdx-source/core/main/classes/framework-selector-method-injection/AbstractSelectorMethodInjectable.cls: line 5 at 12-48",
    ],
    [
      "at4dx/sfdx-source/core/test/classes/framework-selector-method-injection/AbstractSelectorMethodInjectableTest.cls",
      "Warning: line 73 at 12-55: Local variable is hiding class field 'params', see at4dx/sfdx-source/core/main/classes/framework-selector-method-injection/AbstractSelectorMethodInjectable.cls: line 5 at 12-48",
    ],
    [
      "fflib-apex-common/sfdx-source/apex-common/main/classes/fflib_QueryFactory.cls",
      "Warning: line 435 at 2-80: Local variable is hiding class field 'relationship', see fflib-apex-common/sfdx-source/apex-common/main/classes/fflib_QueryFactory.cls: line 85 at 9-47",
    ],
    [
      "fflib-apex-common/sfdx-source/apex-common/main/classes/fflib_SObjectDescribe.cls",
      "Warning: line 187 at 3-82: Local variable is hiding class field 'token', see fflib-apex-common/sfdx-source/apex-common/main/classes/fflib_SObjectDescribe.cls: line 41 at 9-34",
    ],
    [
      "fflib-apex-common/sfdx-source/apex-common/test/classes/fflib_ApplicationTest.cls",
      "Warning: line 382 at 2-73: Local variable is hiding class field 'unitOfWork', see fflib-apex-common/sfdx-source/apex-common/test/classes/fflib_ApplicationTest.cls: line 482:21 to 487:40",
      "Warning: line 416:2 to 419:3: Local variable is hiding class field 'unitOfWork', see fflib-apex-common/sfdx-source/apex-common/test/classes/fflib_ApplicationTest.cls: line 482:21 to 487:40",
    ],
  ],
  "status": 0,
}
`;

exports[`Check samples Sample: automation-components 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: box-salesforce-sdk 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: declarative-lookup-rollup-summaries 1`] = `
{
  "logs": [
    [
      "dlrs/libs/fflib-common/classes/fflib_QueryFactory.cls",
      "Warning: line 446 at 4-75: Local variable is hiding class field 'relationship', see dlrs/libs/fflib-common/classes/fflib_QueryFactory.cls: line 87 at 10-48",
    ],
    [
      "dlrs/libs/fflib-common/classes/fflib_SObjectDescribe.cls",
      "Warning: line 192:6 to 194:7: Local variable is hiding class field 'token', see dlrs/libs/fflib-common/classes/fflib_SObjectDescribe.cls: line 41 at 10-35",
    ],
  ],
  "status": 0,
}
`;

exports[`Check samples Sample: df12-apex-enterprise-patterns 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: df12-deployment-tools 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: dreamhouse-sfdx 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: einstein-ai 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: esapi 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: eventlogging 1`] = `
{
  "logs": [
    [
      "src/classes/Log.cls",
      "Warning: line 137 at 20-105: Local variable is hiding class field 'limits', see src/classes/Log.cls: line 123 at 15-36",
    ],
  ],
  "status": 0,
}
`;

exports[`Check samples Sample: ffhttp-core 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: fflib-apex-common 1`] = `
{
  "logs": [
    [
      "fflib-apex-common/sfdx-source/apex-common/main/classes/fflib_QueryFactory.cls",
      "Warning: line 435 at 2-80: Local variable is hiding class field 'relationship', see fflib-apex-common/sfdx-source/apex-common/main/classes/fflib_QueryFactory.cls: line 85 at 9-47",
    ],
    [
      "fflib-apex-common/sfdx-source/apex-common/main/classes/fflib_SObjectDescribe.cls",
      "Warning: line 187 at 3-82: Local variable is hiding class field 'token', see fflib-apex-common/sfdx-source/apex-common/main/classes/fflib_SObjectDescribe.cls: line 41 at 9-34",
    ],
    [
      "fflib-apex-common/sfdx-source/apex-common/test/classes/fflib_ApplicationTest.cls",
      "Warning: line 382 at 2-73: Local variable is hiding class field 'unitOfWork', see fflib-apex-common/sfdx-source/apex-common/test/classes/fflib_ApplicationTest.cls: line 482:21 to 487:40",
      "Warning: line 416:2 to 419:3: Local variable is hiding class field 'unitOfWork', see fflib-apex-common/sfdx-source/apex-common/test/classes/fflib_ApplicationTest.cls: line 482:21 to 487:40",
    ],
  ],
  "status": 0,
}
`;

exports[`Check samples Sample: fflib-apex-common-samplecode 1`] = `
{
  "logs": [
    [
      "fflib-apex-common/sfdx-source/apex-common/main/classes/fflib_QueryFactory.cls",
      "Warning: line 435 at 2-80: Local variable is hiding class field 'relationship', see fflib-apex-common/sfdx-source/apex-common/main/classes/fflib_QueryFactory.cls: line 85 at 9-47",
    ],
    [
      "fflib-apex-common/sfdx-source/apex-common/main/classes/fflib_SObjectDescribe.cls",
      "Warning: line 187 at 3-82: Local variable is hiding class field 'token', see fflib-apex-common/sfdx-source/apex-common/main/classes/fflib_SObjectDescribe.cls: line 41 at 9-34",
    ],
    [
      "fflib-apex-common/sfdx-source/apex-common/test/classes/fflib_ApplicationTest.cls",
      "Warning: line 382 at 2-73: Local variable is hiding class field 'unitOfWork', see fflib-apex-common/sfdx-source/apex-common/test/classes/fflib_ApplicationTest.cls: line 482:21 to 487:40",
      "Warning: line 416:2 to 419:3: Local variable is hiding class field 'unitOfWork', see fflib-apex-common/sfdx-source/apex-common/test/classes/fflib_ApplicationTest.cls: line 482:21 to 487:40",
    ],
  ],
  "status": 0,
}
`;

exports[`Check samples Sample: fflib-apex-mocks 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: flowtoolbelt 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: force-di 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: forcedotcom-enterprise-architecture 1`] = `
{
  "logs": [
    [
      "src/classes/fflib_SObjectDescribe.cls",
      "Warning: line 181 at 3-82: Local variable is hiding class field 'token', see src/classes/fflib_SObjectDescribe.cls: line 41 at 9-34",
    ],
  ],
  "status": 0,
}
`;

exports[`Check samples Sample: forcelog 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: grid 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: jsonparse 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: logger 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: processBuilderBlocks 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: promise 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: promiseV3 1`] = `
{
  "logs": [
    [
      "force-app/main/default/classes/Chain.cls",
      "Error: line 12 at 14-45: No matching method found for 'getAsyncApexJobResult' on 'System.FinalizerContext' taking no arguments",
      "Error: line 23 at 54-88: No matching method found for 'getAsyncApexJobException' on 'System.FinalizerContext' taking no arguments",
    ],
  ],
  "status": 4,
}
`;

exports[`Check samples Sample: q 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: quiz-host-app 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: rflib 1`] = `
{
  "logs": [
    [
      "rflib/main/default/classes/rflib_GlobalSettings.cls",
      "Missing: line 70 at 75-165: Unknown field or type 'Value__c' on 'System.SObject'",
    ],
    [
      "rflib/test/default/classes/rflib_GlobalSettingsTest.cls",
      "Missing: line 35 at 31-101: Unknown field or type 'Value__c' on 'System.SObject'",
      "Missing: line 44 at 48-138: Unknown field or type 'Value__c' on 'System.SObject'",
      "Missing: line 53 at 48-138: Unknown field or type 'Value__c' on 'System.SObject'",
      "Missing: line 64 at 48-138: Unknown field or type 'Value__c' on 'System.SObject'",
      "Missing: line 77 at 48-138: Unknown field or type 'Value__c' on 'System.SObject'",
    ],
    [
      "rflib/test/default/classes/rflib_LogArchiveControllerTest.cls",
      "Warning: line 90 at 8-150: Local variable is hiding class field 'result', see rflib/test/default/classes/rflib_LogArchiveControllerTest.cls: line 33:25 to 35:6",
      "Warning: line 99 at 8-126: Local variable is hiding class field 'result', see rflib/test/default/classes/rflib_LogArchiveControllerTest.cls: line 33:25 to 35:6",
    ],
    [
      "sfdx-project.json",
      "Warning: line 21 at 16: Package dependency for 'RFLIB@4.0.0-2' ignored as metadata is not available for analysis.",
      "Warning: line 35 at 16: Package dependency for 'RFLIB@4.0.0-2' ignored as metadata is not available for analysis.",
      "Warning: line 38 at 16: Package dependency for 'RFLIB-FS@2.0.0-1' ignored as metadata is not available for analysis.",
    ],
  ],
  "status": 4,
}
`;

exports[`Check samples Sample: sObject-Remote 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: salesforce-bot-toolkit 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: salesforce-limit-monitor 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: selector 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: sendgrid-apex 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: sf-sandbox-post-copy 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: sfdc-convert-attachments-to-chatter-files 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: sfdc-oauth-playground 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: sfdc-related-files-lightning 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: sfdc-trigger-framework 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: sfdx-mass-action-scheduler 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: sfdx-simple 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: sirono-common 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: sobject-work-queue 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: soql-secure 1`] = `
{
  "logs": [
    [
      "src/classes/ConditionBuilder.cls",
      "Error: line 13 at 2-14: Unreachable block or statement",
    ],
  ],
  "status": 4,
}
`;

exports[`Check samples Sample: survey-force 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: twilio-salesforce 1`] = `
{
  "logs": [
    [
      "src/classes/TwilioQueue.cls",
      "Error: line 26 at 8-20: Unreachable block or statement",
    ],
    [
      "src/classes/TwilioResource.cls",
      "Warning: line 290 at 3-52: Local variable is hiding class field 'properties', see src/classes/TwilioResource.cls: line 132 at 10-41",
    ],
    [
      "src/classes/TwilioRestException.cls",
      "Warning: line 66 at 8-27: Local variable is hiding class field 'message', see src/classes/TwilioRestException.cls: line 28 at 25-40",
      "Warning: line 67 at 8-30: Local variable is hiding class field 'moreInfo', see src/classes/TwilioRestException.cls: line 31 at 25-41",
      "Warning: line 68 at 8-32: Local variable is hiding class field 'errorCode', see src/classes/TwilioRestException.cls: line 25 at 25-43",
    ],
  ],
  "status": 4,
}
`;

exports[`Check samples Sample: user-access-visualization 1`] = `
{
  "logs": [],
  "status": 0,
}
`;

exports[`Check samples Sample: visualforce-table-grid 1`] = `
{
  "logs": [
    [
      "src/classes/TableGridController.cls",
      "Warning: line 324 at 5-31: Local variable is hiding class field 'settings', see src/classes/TableGridController.cls: line 78 at 12-39",
    ],
  ],
  "status": 0,
}
`;

exports[`Check samples Sample: visualforce-typeahead 1`] = `
{
  "logs": [],
  "status": 0,
}
`;
